# clicknez

./: .gitignore  clicknez.code-workspace
.devcontainer/: .env  compose.yaml  devcontainer.json
clicknez-host/: Cargo.toml
clicknez-host/src/: auth.rs  main.rs  workflow.rs
