[package]
name = "clicknez-host"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
trace = "0.1.7"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "time"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
